--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ola mundo people!</h1>
+    <h1>ola mundo people <feature2 class="0"></feature2>!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem aspernatur maxime deleniti mollitia illum corrupti, consequatur quasi obcaecati officiis corporis! Facere nesciunt architecto necessitatibus. Sapiente, eligendi. Earum, architecto sint?</p>
 </body>
 </html>
